fix: LW review view not showing wearables to review correctly (#3223)
* fix: LW review view not showing wearables to review correctly

* fix: PR review

* fix: Update typescript version

* fix: Add new line

--- a/src/components/ItemEditorPage/LeftPanel/Items/Items.css
+++ b/src/components/ItemEditorPage/LeftPanel/Items/Items.css
@@ -83,3 +83,18 @@
 .Items > .Collapsable .label > .Icon {
   margin-right: 8px;
 }
+
+.Items > .empty {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 32px;
+}
+
+.Items > .empty .subtitle {
+  color: var(--secondary-text);
+}
